--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -28,8 +28,10 @@ jobs:
       with:
         name: lab8.jar
         path: out/artifacts/lab8_jar/lab8.jar
-    - name: Deploy javadoc
+    - name: Creates a JavaDoc
+      run:  ant -noinput -buildfile build.xml javadoc
+    - name: Upload javadoc
       uses: actions/upload-artifact@v3.0.0
       with:
-        name: index.html
-        path: index.html
+        name: javadoc
+        path: javadoc
