--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
     <target name="javadoc" depends="compile"
              description="generate javadoc">
         <javadoc destdir="javadoc">
-            <fileset dir="src/lab8" >
+            <fileset dir="lab8/src" >
                 <include name="*.java"/>
             </fileset>
         </javadoc>
